Refactor security, access, and compliance services
This commit introduces significant refactoring to the security, access control, and compliance services. Key changes include:

*   **Decoupling from AICoreService:** Services now rely on injected dependencies like `AuditService`, `CacheManager`, `Clock`, and specific policy interfaces (`EntityAccessPolicy`, `ComplianceCheckProvider`, `SecurityAnalysisPolicy`). This promotes better modularity and testability.
*   **Introduction of Policy Hooks:** New interfaces (`EntityAccessPolicy`, `ComplianceCheckProvider`, `SecurityAnalysisPolicy`) are introduced, allowing customers to provide their own domain-specific logic for access control, compliance checks, and security analysis.
*   **Enhanced Auditing:** Integration with `AuditService` is deepened, ensuring more comprehensive logging of security and compliance events.
*   **Caching for Access Control:** The `AIAccessControlService` now utilizes caching to improve performance for repeated access decisions.
*   **Rate Limiting Improvements:** The `AISecurityService` includes more robust rate-limiting mechanisms.
*   **Refined DTOs:** Minor adjustments to DTOs like `AIAccessControlResponse` to include cache status.
*   **Integration Tests:** New integration tests are added for `AIAccessControlService`, `AIComplianceService`, `AISecurityService`, and `RAGOrchestrator` to verify the new hook mechanisms and overall functionality.

These changes aim to make the AI infrastructure more flexible, secure, and compliant by enabling deeper customization through pluggable policies and improving observability.

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>